WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85176
REGRESSION(
r115600
): parseLocalizedDate() should fail for invalid inputs
https://bugs.webkit.org/show_bug.cgi?id=85176
Summary
REGRESSION(r115600): parseLocalizedDate() should fail for invalid inputs
Pavel Feldman
Reported
2012-04-30 04:27:29 PDT
fast/forms/date/input-date-commit-valid-only.html = TEXT
http://trac.webkit.org/changeset/115600/
Attachments
Patch
(2.98 KB, patch)
2012-04-30 20:00 PDT
,
Kent Tamura
haraken
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2012-04-30 20:00:20 PDT
Created
attachment 139574
[details]
Patch
Kentaro Hara
Comment 2
2012-04-30 20:42:16 PDT
Comment on
attachment 139574
[details]
Patch Looks OK
Kentaro Hara
Comment 3
2012-04-30 20:45:14 PDT
Comment on
attachment 139574
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=139574&action=review
> Source/WebCore/ChangeLog:7 > +
It would be better to write: Test: fast/forms/date/input-date-commit-valid-only.html
Kent Tamura
Comment 4
2012-04-30 20:50:14 PDT
Committed
r115711
: <
http://trac.webkit.org/changeset/115711
>
Kent Tamura
Comment 5
2012-04-30 20:51:11 PDT
(In reply to
comment #3
)
> > Source/WebCore/ChangeLog:7 > > + > > It would be better to write: > > Test: fast/forms/date/input-date-commit-valid-only.html
Added it, and landed. Thanks.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug