REGRESSION(r115600): parseLocalizedDate() should fail for invalid inputs https://bugs.webkit.org/show_bug.cgi?id=85176

Reviewed by Kentaro Hara.

Source/WebCore:

Test: fast/forms/date/input-date-commit-valid-only.html

* platform/text/mac/LocalizedDateMac.mm:
(WebCore::parseLocalizedDate):
We should check nil for the result of NSDateFormtter::dateFromString.

LayoutTests:

* platform/chromium/test_expectations.txt: Remove an entry for a fixed test.

Canonical link: https://commits.webkit.org/102809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115711 268f45cc-cd09-0410-ab3c-d52691b4dbfc